{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 17,
  "lineage": "2d631323-16af-cc51-fec4-026f1db51675",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08718895af4dfa033",
            "arn": "arn:aws:ec2:ap-south-1:767397922031:instance/i-047f2861c73a98d49",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047f2861c73a98d49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a44f2177ec0295e7",
            "private_dns": "ip-10-0-1-169.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "public_ip": "15.206.117.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03973a8d227699f1e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a338d76c7955cdd0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caa505abfdcf97d8",
            "tags": {
              "Name": "prod - 1"
            },
            "tags_all": {
              "Name": "prod - 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a338d76c7955cdd0"
            ]
          },
          "dependencies": [
            "module.EC2.aws_key_pair.tf-key-pair",
            "module.EC2.tls_private_key.rsa",
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.rt1",
            "module.vpc.aws_route_table.rt2",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08718895af4dfa033",
            "arn": "arn:aws:ec2:ap-south-1:767397922031:instance/i-0ed04d774b24f46ec",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed04d774b24f46ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d732df35cbbe0344",
            "private_dns": "ip-10-0-2-4.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05369b9f7dff21de2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a338d76c7955cdd0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0442f2e786d52a0e7",
            "tags": {
              "Name": "prod - 2"
            },
            "tags_all": {
              "Name": "prod - 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a338d76c7955cdd0"
            ]
          },
          "dependencies": [
            "module.EC2.aws_key_pair.tf-key-pair",
            "module.EC2.tls_private_key.rsa",
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.rt1",
            "module.vpc.aws_route_table.rt2",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017c3447a2391f34b",
            "arn": "arn:aws:ec2:ap-south-1:767397922031:elastic-ip/eipalloc-017c3447a2391f34b",
            "associate_with_private_ip": "10.0.2.0/24",
            "domain": "vpc",
            "id": "eipalloc-017c3447a2391f34b",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-211-233.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.211.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:internet-gateway/igw-0b8574387b7633de3",
            "id": "igw-0b8574387b7633de3",
            "owner_id": "767397922031",
            "tags": {
              "Name": "prod-terraform-igw"
            },
            "tags_all": {
              "Name": "prod-terraform-igw"
            },
            "vpc_id": "vpc-078223d4b85b38870"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017c3447a2391f34b",
            "association_id": "eipassoc-0f8218ea9a1727a88",
            "connectivity_type": "public",
            "id": "nat-00dc71ed0c6f4f3f7",
            "network_interface_id": "eni-03f70a37895772ec3",
            "private_ip": "10.0.2.165",
            "public_ip": "3.111.211.233",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0442f2e786d52a0e7",
            "tags": {
              "Name": "prod-terraform-nat"
            },
            "tags_all": {
              "Name": "prod-terraform-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:route-table/rtb-0d565970d74d52ac4",
            "id": "rtb-0d565970d74d52ac4",
            "owner_id": "767397922031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8574387b7633de3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rt1"
            },
            "tags_all": {
              "Name": "prod-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-078223d4b85b38870"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:route-table/rtb-0b11695827ff2effe",
            "id": "rtb-0b11695827ff2effe",
            "owner_id": "767397922031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00dc71ed0c6f4f3f7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rt2"
            },
            "tags_all": {
              "Name": "prod-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-078223d4b85b38870"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c94fe3a99a4646f3",
            "route_table_id": "rtb-0d565970d74d52ac4",
            "subnet_id": "subnet-0caa505abfdcf97d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt1",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efb224b41041a509",
            "route_table_id": "rtb-0b11695827ff2effe",
            "subnet_id": "subnet-0442f2e786d52a0e7"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.rt2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:security-group/sg-0a338d76c7955cdd0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a338d76c7955cdd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-sg",
            "name_prefix": "",
            "owner_id": "767397922031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg"
            },
            "tags_all": {
              "Name": "prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078223d4b85b38870"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:subnet/subnet-0442f2e786d52a0e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0442f2e786d52a0e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397922031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-private-tf"
            },
            "tags_all": {
              "Name": "prod-private-tf"
            },
            "vpc_id": "vpc-078223d4b85b38870"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:subnet/subnet-0caa505abfdcf97d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caa505abfdcf97d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397922031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-public-tf"
            },
            "tags_all": {
              "Name": "prod-public-tf"
            },
            "vpc_id": "vpc-078223d4b85b38870"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:vpc/vpc-078223d4b85b38870",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05cd86eb6f8a90b8e",
            "default_route_table_id": "rtb-01880bfea2334850d",
            "default_security_group_id": "sg-0d4e50f03eb5c046e",
            "dhcp_options_id": "dopt-0c4428013e72b7af1",
            "enable_dns_hostnames": true,
            "enable_dns_support": false,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078223d4b85b38870",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01880bfea2334850d",
            "owner_id": "767397922031",
            "tags": {
              "Name": "prod-terraform-vpc"
            },
            "tags_all": {
              "Name": "prod-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}